# Mini-spider

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  Makefile.bat  README.md  SECURITY.md  __init__.py  metadata.json  pyproject.toml  requirements.txt  run.py  setup.py  spider_max.bat
api/: health.py  permissions.py
astrbot_plugins/auth_gateway/: main.py
astrbot_plugins/meta_observer_adapter/: main.py  metadata.yaml
astrbot_plugins/meta_observer_adapter/.astrbot-plugin/i18n/: zh-CN.json
cli/: __init__.py  main.py
config/: .env.example  RULE1_communication.md  RULE3_skill_lifecycle.md  docker-compose.unattended.yml
core/: registry.py
docs/: COMPARISON.md  CORE_SUMMARY.md  IDE-插件遍历报告-20260529.md  ITERATION_SUMMARY.md  VERSION_REPORT.md
docs/kilo-config/: README.md
docs/skills-reference/: README.md
spider_max/: __init__.py  astrbot_gateway_adapter.py  auth_gateway.py  check_and_start.py  config.py  event_bus.py  example.py  file_access_layer.py  main.py  models.py  monitoring.py  orchestrator.py  report_generator.py  run_tests.py  scheduler.py  self_healing.py  start_unattended.py  unattended_event_scheduler.py  unattended_validator.py  validate_config.py  workflow_executor.py
spider_max/agents/: __init__.py  registry.py
spider_max/agents/schedules/: __init__.py  daily_schedule.py  weekly_schedule.py
spider_max/ai_workspace/: __init__.py  spider_max_ops.py
spider_max/ai_workspace/dispatchers/: __init__.py  agent_dispatcher.py
spider_max/ai_workspace/docs/: doc_generator.py
spider_max/ai_workspace/notifications/: __init__.py  notification_hub.py
spider_max/ai_workspace/recovery/: __init__.py  config_rollback.py  db_backup.py  monitor_alerts.py  rebuild.py  recovery_manager.py
spider_max/api/: __init__.py  agents.py  dashboard.py  executions.py  modules.py  schedules.py  server.py  store.py  workflows.py
spider_max/api/api/: dashboard.py  server.py
spider_max/astrbot_plugins/meta_observer_adapter/.astrbot-plugin/i18n/: en-US.json
spider_max/config/: RULE2_storage.md
spider_max/core/: __init__.py  plugin_manager.py
spider_max/db/: __init__.py  pool.py
spider_max/db/migrations/: 001_initial.sql
spider_max/tests/: test_daily_ops.py
spider_max/workflows/: __init__.py  wf_001_data_sync.py  wf_002_task_tracking.py  wf_003_overdue_alert.py  wf_004_cicd.py  wf_005_compliance.py  wf_006_backup.py  wf_007_git_sync.py  wf_008_log_analysis.py  wf_011_doc_slice.py  wf_012_ctx_track.py  wf_013_agent_collect.py  wf_014_doc_archive.py  wf_daily_ops.py  wf_lifecycle_scan.py  wf_okr_report.py
spider_meta/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  __init__.py  config.py  cost_guard.py  deploy.ps1  deploy.sh  docker-compose.yml  main.py  metadata.json  pyproject.toml  run_parallel.py  settings.yaml
spider_meta/.github/workflows/: ci.yml
spider_meta/agents/: __init__.py  agent_manager.py  agent_router.py  protocol.py
spider_meta/agents/cloud/: __init__.py
spider_meta/agents/local/: __init__.py
spider_meta/core/: __init__.py  dag_engine.py  event_bus.py  event_consumer.py  pipeline_orchestrator.py  schemas.py  worker_dispatcher.py
spider_meta/docs/: API.md  ARCHITECTURE.md  SKILL_COMPATIBILITY.md  interface_spec.md  kg_config.md  kg_sync_guide.md  requirements.md
spider_meta/modules/: __init__.py  experience_manager.py  knowledge_retriever.py  task_decomposer.py
spider_meta/monitoring/: __init__.py  alerts.json  metrics.py
spider_meta/plugins/: __init__.py
spider_meta/services/: llm_service.py
spider_meta/tests/: conftest.py  test_events.py  test_pipeline.py  test_sop_hotswap.py
spider_meta/tests/integration/: test_core_pipeline.py
spider_meta/utils/: __init__.py  kg_export_to_vector.py
spidermax_room/: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LICENSE  README.md  docker-compose.yml  metadata.json  pyproject.toml
spidermax_room/docs/: DEPLOYMENT.md  api.md  architecture.md  user-guide.md
spidermax_room/src/spidermax_room/: __init__.py  __main__.py  client.py  engine.py  event.py  member.py  room.py  server.py
spidermax_room/tests/: test_version.py  test_websocket.py
tests/: test_event_bus.py  test_orchestrator.py  test_scheduler.py  test_validator.py  test_workflow_executor.py
