[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spidermax-room"
version = "2.0.0"
description = "MAX ROOM — Virtual collaboration space for agents and humans"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "System Manager"}]
keywords = ["spider", "max-room", "collaboration", "event-driven"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/freeword26/Mini-spider"
Repository = "https://github.com/freeword26/Mini-spider"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
